fix: fixed bugs on mobile

--- a/src/components/NavHeader/styles.module.scss
+++ b/src/components/NavHeader/styles.module.scss
@@ -240,7 +240,7 @@
   }
   
   .navBlackHeader {
-    top: 10px;
+    padding: 15px 0;
     background: transparent;
 
     .actionButton {
@@ -279,7 +279,7 @@
   }
   
   .navBlackHeader {
-    top: 10px;
+    padding: 15px 0;
     background: transparent;
 
     .actionButton {
