--- a/src/pageComponents/Home/components/GridModule/styles.module.scss
+++ b/src/pageComponents/Home/components/GridModule/styles.module.scss
@@ -103,6 +103,10 @@
           height: 88px;
         }
 
+        .gridTitle2 {
+          padding: 0 150px 46px 36px;
+        }
+
         .gridDesc2, .gridDesc3 {
           height: 108px;
         }
